--- a/games/templates/games/base.html
+++ b/games/templates/games/base.html
@@ -96,7 +96,7 @@
         <div class="col-md-8" style="padding: 50px; left: 200px; top: 40px; height: 100%">
           <h3>Next, we will ask you to play a game in which you have the opportunity to earn a little bit of cash. You are an Investor, investing in another person called the Responder. The Responder is someone from an American city who has already played their part of the game.</h3>
           <div style="margin-left:30%; margin-right: 30%; width: 100%">
-            <form style="width: 30%" class="form-signin" action="/login/" method="post">{% csrf_token %}
+            <form style="width: 30%" class="form-signin" action="/" method="post">{% csrf_token %}
               <button class="btn btn-lg btn-primary btn-block" type="submit">Begin Game</button>
             </form>
           </div>
