--- a/games/templates/games/compare.html
+++ b/games/templates/games/compare.html
@@ -8,6 +8,7 @@
     <div>
       <ul>
       	<li>
+          <h3>Test User Id: {{umid}} </h3>
       		<h3>You decided to pass {{invested}} to  {{respondent}}</h3>
       	</li>
       	<li>
@@ -30,7 +31,6 @@
 {% endblock %}
 
 {% block rightcontent %}
-
 {% endblock %}
 
 {% block scontent %}
