--- a/games/templates/games/guess.html
+++ b/games/templates/games/guess.html
@@ -28,5 +28,12 @@
 
 {% block scontent %}
   <!-- JavaScript code for this project -->
+  <script type="text/javascript">
+history.pushState(null, document.title, location.href);
+window.addEventListener('popstate', function (event)
+{
+  history.pushState(null, document.title, location.href);
+});
+  </script>
 
 {% endblock %}
