--- a/games/templates/games/compare.html
+++ b/games/templates/games/compare.html
@@ -7,25 +7,30 @@
 {% block leftcontent %}
     <div>
       <ul>
+        <li>
+          <h3>You decided to pass $ {{invested}} to  {{respondent}}</h3>
+        </li>
       	<li>
-          <h3>Test User Id: {{umid}} </h3>
-      		<h3>You decided to pass {{invested}} to  {{respondent}}</h3>
+      		<h3>{{respondent}} decided to return back $ {{real_returned}}</h3>
       	</li>
       	<li>
-      		<h3>{{respondent}} decided to return back {{real_returned}}</h3>
-      	</li>
-      	<li>
-      		<h3>You guess that {{respondent}} would return {{guess_returned}}</h3>
+      		<h3>You guessed that {{respondent}} would return $ {{guess_returned}}</h3>
       	</li>
       	<li>
  
-      		<h3>You guess is {{guess_flag}} the $1 of how much {{respondent}} decided to give back</h3>
+      		<h3>Your guess is {{guess_flag}} the $1 of how much {{respondent}} decided to give back to you</h3>
       	</li>
       	<li>
-      		<h3>Therefore you earned {{received}}</h3>
+      		<h3>Therefore you earned ${{received}} in total</h3>
       	</li>
       </ul>
     </div>
+    <div>
+    <form action="{% url 'question' %}" >{% csrf_token %}
+      <button  type="submit">Go to Questions</button>
+    </form>
+    </div>
+  
   
 
 {% endblock %}
@@ -35,5 +40,12 @@
 
 {% block scontent %}
   <!-- JavaScript code for this project -->
+<script type="text/javascript">
+history.pushState(null, document.title, location.href);
+window.addEventListener('popstate', function (event)
+{
+  history.pushState(null, document.title, location.href);
+});
 
+</script>
 {% endblock %}
