--- a/games/templates/games/compare.html
+++ b/games/templates/games/compare.html
@@ -26,7 +26,7 @@
       </ul>
     </div>
     <div>
-    <form action="{% url 'question' %}" >{% csrf_token %}
+    <form action="{% url 'question0' %}" >{% csrf_token %}
       <button  type="submit">Go to Questions</button>
     </form>
     </div>
