a version with not go back

--- a/games/templates/games/Question1.html
+++ b/games/templates/games/Question1.html
@@ -16,7 +16,7 @@
 
   <div class="random">
     {% csrf_token %}
-    <p id="xx"><b>Read each of the four statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them </b></p>
+    <p id="xx"><b>Read each of the four statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them. </b></p>
     <ul>
       <li>
         Some corporal punishment (e.g., spanking) is an important element of good child-rearing.
@@ -78,7 +78,7 @@
 
   <div class="random">
     {% csrf_token %}
-    <p id="xx"><b>Read each of the five statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them </b></p>
+    <p id="xx"><b>Read each of the five statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them. </b></p>
     <ul>
       <li>
         Some corporal punishment (e.g., spanking) is an important element of good child-rearing.
@@ -135,20 +135,20 @@
     <div class="radio" id="xx">
       <label>
         <input type="radio" name="question5" id="question5G" value="G">
-        Don't know   
+        Don't know.
       </label>
     </div>  
     <div class="radio" id="xx">
       <label>
         <input type="radio" name="question5" id="question5H" value="H">
-        Refuse to answer
+        Refuse to answer.
     </div>
   </div>
 
 
   <div class="random">
     {% csrf_token %}
-    <p id="xx"><b>Read each of the five statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them </b></p>
+    <p id="xx"><b>Read each of the five statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them. </b></p>
     <ul>
       <li>
         Some corporal punishment (e.g., spanking) is an important element of good child-rearing.
@@ -205,13 +205,13 @@
     <div class="radio" id="xx">
       <label>
         <input type="radio" name="question5" id="question5G" value="G">
-        Don't know   
+        Don't know.   
       </label>
     </div>  
     <div class="radio" id="xx">
       <label>
         <input type="radio" name="question5" id="question5H" value="H">
-        Refuse to answer
+        Refuse to answer.
     </div>
   </div>
 
