--- a/games/templates/games/compare.html
+++ b/games/templates/games/compare.html
@@ -8,20 +8,20 @@
     <div>
       <ul>
         <li>
-          <h3>You decided to pass $ {{invested}} to  {{respondent}}</h3>
+          <h3>You decided to pass ${{invested}} to  {{respondent}}</h3>
         </li>
       	<li>
-      		<h3>{{respondent}} decided to return back $ {{real_returned}}</h3>
+      		<h3>{{respondent}} decided to return back ${{real_returned}}</h3>
       	</li>
       	<li>
-      		<h3>You guessed that {{respondent}} would return $ {{guess_returned}}</h3>
+      		<h3>You guessed that {{respondent}} would return ${{guess_returned}}</h3>
       	</li>
       	<li>
  
       		<h3>Your guess is {{guess_flag}} the $1 of how much {{respondent}} decided to give back to you</h3>
       	</li>
       	<li>
-      		<h3>Therefore you earned ${{received}} in total</h3>
+      		<h3>Therefore you earned ${{real_returned}} + ${{user_left}} + ${{bonus}} = ${{received}} in total</h3>
       	</li>
       </ul>
     </div>
