--- a/games/templates/games/Trust Game.html
+++ b/games/templates/games/Trust Game.html
@@ -18,7 +18,7 @@
            <h4  style="display:inline">As the Investor, you will then have the opportunity to pass some, all or none of your $5 to {{respondent}} </h4> <h4  style="display:inline">, as you like.</h4>
       </li>
       <li>
-        <h4 style="display:inline">Then we will triple the amount you give and pass it to {{respondent}} </h4>
+        <h4 style="display:inline">Then we will triple the amount you give and pass it to {{respondent}}. </h4>
         <br>
       </li>
       <li>
@@ -34,7 +34,7 @@
     {% else %}
     <div id="Instructions3">
       <h3>
-         Next, guess how much {{respondent}} will give back to you. You receive a bonus for a good guess – if your guess is within $1 of the actual amount, you will earn an additional $2. How much do you think the Responder has decided to give back to you?
+         Next, guess how much {{respondent}} will give back to you. You receive a bonus for a good guess – if your guess is within $1 of the actual amount, you will earn an additional $2. How much do you think the {{respondent}} has decided to give back to you?
       </h3>
     </div>
     {% endif %}
