refactor(views): simplify remaining views

--- a/games/core/templates/base.html
+++ b/games/core/templates/base.html
@@ -19,6 +19,12 @@
       crossorigin="anonymous"
     ></script>
 
+    <script
+      src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+      integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+      crossorigin="anonymous"
+    ></script>
+
     <link
       rel="shortcut icon"
       type="image/png"
