--- a/games/invest_game/templates/question1.html
+++ b/games/invest_game/templates/question1.html
@@ -1,316 +1,225 @@
-{% extends "base.html" %}
+{% extends "base.html" %} 
 
-{% load staticfiles %}
+{% load static %} 
 
-{% block title %}Welcome!{% endblock %}
+{% block title %}Welcome!{% endblock title %} 
 
 {% block leftcontent %}
-
-
-<div id="questionnaire_si1">
-  <br>
-  <br>
-<form action="{% url 'question1_store' %}" method="post" id="questionform">
-  {% csrf_token %}
-
-
-  <div class="random">
+<div id="questionnaire_si0">
+  <br />
+  <br />
+  <form action="{% url 'question1' %}" method="post" id="questionform">
     {% csrf_token %}
-    <p id="xx"><b>Read each of the four statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them. </b></p>
-    <ul>
-      <li>
-        Some corporal punishment (e.g., spanking) is an important element of good child-rearing.
-      </li>
-      <li>
-        I remember when the first Star Wars movie ("A New Hope") was in movie theaters. 
-      </li>
-      <li>
-        When I was in high school, I owned my own personal music player (e.g., a Walkman, portable CD player, MP3 player, iPod, smartphone, or similar device that is usually used with earphones).
-      </li>
-      <li>
-        I have traveled to a country other than the United States. 
-      </li>
-    </ul>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5A" value="A">
-         I agree with none of the above.  
-        </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5B" value="B">
-        I agree with exactly 1 of the above statements.  
-      </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5C" value="C">
-        I agree with exactly 2 of the above statements.  
-      </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5D" value="D">
-        I agree with exactly 3 of the above statements.     
-      </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5E" value="E">
-        I agree with all 4 of the above statements.     
-      </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5F" value="F">
-        Don't know.   
-      </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5G" value="G">
-        Refuse to answer.   
-      </label>
-    </div>  
-  </div>
 
+    <p><b>Are you a U.S. citizen?</b></p>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question1" id="question1A" value="A" />
+        Yes
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question1" id="question1B" value="B" />
+        No
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question1" id="question1C" value="C" />
+        Don't know
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question1" id="question1D" value="D" />
+        Refuse to answer
+      </label>
+    </div>
 
-  <div class="random">
-    {% csrf_token %}
-    <p id="xx"><b>Read each of the five statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them. </b></p>
-    <ul>
-      <li>
-        Some corporal punishment (e.g., spanking) is an important element of good child-rearing.
-      </li>
-      <li>
-        I remember when the first Star Wars movie ("A New Hope") was in movie theaters. 
-      </li>
-      <li>
-        Immigration to the United States should be further reduced.
-      </li>
-      <li>
-        When I was in high school, I owned my own personal music player (e.g., a Walkman, portable CD player, MP3 player, iPod, smartphone, or similar device that is usually used with earphones).
-      </li>
-      <li>
-        I have traveled to a country other than the United States. 
-      </li>
-    </ul>
-    <div class="radio" id="xx">
+    <p>
+      <b>Did you vote for a presidential candidate in the last election?</b>
+    </p>
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5A" value="A">
-         I agree with none of the above.  
-        </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5B" value="B">
-        I agree with exactly 1 of the above statements.  
+        <input type="radio" name="question2" id="question2A" value="A" />
+        Yes
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5C" value="C">
-        I agree with exactly 2 of the above statements.  
+        <input type="radio" name="question2" id="question2B" value="B" />
+        No
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5D" value="D">
-        I agree with exactly 3 of the above statements.     
+        <input type="radio" name="question2" id="question2C" value="C" />
+        Don't know
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5E" value="E">
-        I agree with exactly 4 of the above statements.     
+        <input type="radio" name="question2" id="question2D" value="D" />
+        Refuse to answer
       </label>
     </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5F" value="F">
-        I agree with all 5 of the above statements.     
-      </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5G" value="G">
-        Don't know.
-      </label>
-    </div>  
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5H" value="H">
-        Refuse to answer.
-    </div>
-  </div>
 
+    <p><b>How did you vote for?</b></p>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question3" id="question3A" value="A" />
+        Donald Trump
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question3" id="question3B" value="B" />
+        Hillary Clinton
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question3" id="question3C" value="C" />
+        Other
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question3" id="question3D" value="C" />
+        Don't know
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="question3" id="question3E" value="D" />
+        Refuse to answer
+      </label>
+    </div>
 
-  <div class="random">
-    {% csrf_token %}
-    <p id="xx"><b>Read each of the five statements below and indicate HOW MANY of them you agree with. You are NOT being asked to indicate which ones you agree with, just how many of them. </b></p>
-    <ul>
-      <li>
-        Some corporal punishment (e.g., spanking) is an important element of good child-rearing.
-      </li>
-      <li>
-        I remember when the first Star Wars movie ("A New Hope") was in movie theaters. 
-      </li>
-      <li>
-        Muslim immigration to the United States should be further reduced.
-      </li>
-      <li>
-        When I was in high school, I owned my own personal music player (e.g., a Walkman, portable CD player, MP3 player, iPod, smartphone, or similar device that is usually used with earphones).
-      </li>
-      <li>
-        I have traveled to a country other than the United States. 
-      </li>
-    </ul>
-    <div class="radio" id="xx">
+    <p><b>Are your political views generally closer to </b></p>
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5A" value="A">
-         I agree with none of the above.  
-        </label>
-    </div>
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5B" value="B">
-        I agree with exactly 1 of the above statements.  
+        <input type="radio" name="question4" id="question4A" value="A" />
+        The Democrats
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5C" value="C">
-        I agree with exactly 2 of the above statements.  
+        <input type="radio" name="question4" id="question4B" value="B" />
+        The Republicans
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5D" value="D">
-        I agree with exactly 3 of the above statements.     
+        <input type="radio" name="question4" id="question4C" value="C" />
+        Other
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5E" value="E">
-        I agree with exactly 4 of the above statements.     
+        <input type="radio" name="question4" id="question4B" value="B" />
+        No preference
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5F" value="F">
-        I agree with all 5 of the above statements.     
+        <input type="radio" name="question4" id="question4D" value="C" />
+        Don't know
       </label>
     </div>
-    <div class="radio" id="xx">
+    <div class="radio">
       <label>
-        <input type="radio" name="question5" id="question5G" value="G">
-        Don't know.   
+        <input type="radio" name="question4" id="question4E" value="D" />
+        Refuse to answer
       </label>
-    </div>  
-    <div class="radio" id="xx">
-      <label>
-        <input type="radio" name="question5" id="question5H" value="H">
-        Refuse to answer.
     </div>
-  </div>
 
-
-  <button  style="position: relative; right: 0px; top: 10px" type="submit">next</button>
-</form>
-<br>
-<br>
-<br>
+    <button style="position: relative; right: 0px; top: 10px" type="submit">
+      Next
+    </button>
+  </form>
+  <br />
+  <br />
+  <br />
 </div>
-
-{% endblock %}
+{% endblock leftcontent %} 
 
 {% block rightcontent %}
-    <div id="RightContentContainer">
-    </div>
-{% endblock %}
+<div id="RightContentContainer"></div>
+{% endblock rightcontent %} 
 
-{% block scontent %}
-  <!-- JavaScript code for this project -->
-
+{% block content %}
+<!-- JavaScript code for this project -->
 <script type="text/javascript">
+  $("#RightContentContainer").height($("#questionnaire_si0").height());
+  var keep = Math.floor(Math.random() * 3);
 
-      $("#RightContentContainer").height($("#questionnaire_si1").height()*0.4);
-      // $("#RightContentContainer").width($(window).width()/2);
-        
-      var keep = Math.floor(Math.random() * 3); 
+  $(document).ready(function() {
+    var elems = $(".random");
+    for (var i = 0; i < elems.length; ++i) {
+      if (i !== keep) {
+        $(elems[i]).hide();
+      }
+    }
+  });
+  function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie != "") {
+      var cookies = document.cookie.split(";");
+      for (var i = 0; i < cookies.length; i++) {
+        var cookie = jQuery.trim(cookies[i]);
+        // Does this cookie string begin with the name we want?
+        if (cookie.substring(0, name.length + 1) == name + "=") {
+          cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+          break;
+        }
+      }
+    }
+    return cookieValue;
+  }
+  var csrftoken = getCookie("um-online-study-game-csrftoken");
 
-      $( document ).ready(function() {
-                      
-          var elems = $(".random");
-          for (var i = 0; i < elems.length; ++i) {
-              if (i !== keep) {
-                $(elems[i]).hide();
-              }
-          }
+  function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return /^(GET|HEAD|OPTIONS|TRACE)$/.test(method);
+  }
+  $.ajaxSetup({
+    beforeSend: function(xhr, settings) {
+      if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+      }
+    },
+  });
 
+  $("#questionform").submit(function(event) {
+    event.preventDefault();
+
+    var errorInPage = false;
+
+    var q1answer = $("input[name=question1]:checked").val();
+
+    var q2answer = $("input[name=question2]:checked").val();
+
+    var q3answer = $("input[name=question3]:checked").val();
+
+    var q4answer = $("input[name=question4]:checked").val();
+
+    if (!q1answer || !q2answer || !q3answer || !q4answer) {
+      alert("Please check all the anwsers");
+    } else {
+      request = $.ajax({
+        url: "{% url 'invest_game:question0' %}",
+        method: "POST",
+        data: {
+          question1: q1answer,
+          question2: q2answer,
+          question3: q3answer,
+          question4: q4answer,
+        },
+        datatype: "json",
       });
-       function getCookie(name) {
-            var cookieValue = null;
-            if (document.cookie && document.cookie != '') {
-                var cookies = document.cookie.split(';');
-                for (var i = 0; i < cookies.length; i++) {
-                    var cookie = jQuery.trim(cookies[i]);
-                    // Does this cookie string begin with the name we want?
-                    if (cookie.substring(0, name.length + 1) == (name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
-                    }
-                }
-            }
-            return cookieValue;
-        }
-        var csrftoken = getCookie("um-online-study-game-csrftoken");
-
-        function csrfSafeMethod(method) {
-            // these HTTP methods do not require CSRF protection
-            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        }
-        $.ajaxSetup({
-            beforeSend: function(xhr, settings) {
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                }
-            }
-        });
-
-
-      $( "#questionform" ).submit(function( event ) {
-          event.preventDefault();
-
-          var errorInPage = false;
-
-          var q5answer = $('input[name=question5]:checked').val();
-
-
-          if (!q5answer) {
-            alert("Please check all the anwsers")
-          } else {
-
-            request = $.ajax({
-                url: "{% url 'question1_store' %}",
-                method: "POST",
-                data:
-                { 'question5': q5answer, 'questiontype': keep}
-                ,
-                datatype: "json"
-            });
-            
-            request.done(function(msg) {
-                var url = "{% url 'question2' %}";
-                window.location.href = url; 
-            });
-          }
-        })
-    
-
+    }
+  });
 </script>
-
-
-
-{% endblock %}
+{% endblock content %}
