--- a/games/invest_game/templates/compare.html
+++ b/games/invest_game/templates/compare.html
@@ -31,7 +31,7 @@
   </ul>
 </div>
 <div>
-  <form action="{% url 'invest_game:question1' %}">
+  <form action="{% url 'invest_game:compare' %}">
     {% csrf_token %}
     <button type="submit">Go to Questions!</button>
   </form>
